<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.swim3.MainActivity">

    <Button
        android:id="@+id/authorButton"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="388dp"
        android:text="@string/o_autorze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="388dp"
        android:text="@string/przejdz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="328dp"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="220dp"
        android:max="100"
        android:progress="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zdjecie_ptakow" />

    <TextView
        android:id="@+id/opacityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/opacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/formButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="Przejdz do formularza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorButton" />

    <Button
        android:id="@+id/savedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zapisane w pliku"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="446dp" />

</android.support.constraint.ConstraintLayout>
